# fuzzy-umbrella

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agent-comms/: README.md  state.json
.claude/: settings.json
.claude/agents/: implementer.md  orchestrator.md  plan-reviewer.md  planner.md  reviewer.md  tester.md
.claude/commands/: new-feature.md  pr-check.md  reset-budget.md  start-container.md
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 0001_create_items_table.py  0002_create_whatsapp_tables.py  0003_add_agent_type_to_conversations.py
docs/features/: fastapi-react-setup.md  multi-agent-whatsapp.md  sentry-integration.md  whatsapp-bot.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: items.ts
frontend/src/components/: CreateItemForm.tsx  ItemList.tsx
frontend/src/components/__tests__/: CreateItemForm.test.tsx  (+2 more)
scripts/: budget_guard.py  container_guard.py  run.sh
src/api/: database.py  db_models.py  db_models_whatsapp.py  main.py  models.py  sentry_utils.py
src/api/routers/: __init__.py  health.py  items.py  whatsapp.py
src/api/services/: agent_config.py  student_service.py  whatsapp_service.py
tests/integration/: conftest.py  test_items_integration.py
tests/unit/: conftest.py  test_agent_config.py  test_health.py  test_items.py  test_sentry.py  test_student_service.py  test_whatsapp_router.py  test_whatsapp_service.py
