[project]
name = "fuzzy-umbrella"
version = "0.1.0"
description = "FastAPI + React scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23.7",
    "pytest-cov",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff",
    "pyright",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
